HPC-8590: Improve configuration UI by fixing subform action buttons and refining some styles in the configuration container, prevent flickering in Layout Builder form

--- a/html/modules/custom/ghi_form_elements/css/configuration_container.css
+++ b/html/modules/custom/ghi_form_elements/css/configuration_container.css
@@ -3,6 +3,9 @@
   margin-bottom: 0 !important;
   line-height: 1.5rem;
 }
+.ui-dialog .hpc-form-wrapper .form-type--configuration_container.glb-form-item.list-view {
+  padding-bottom: 3rem;
+}
 .ui-dialog .hpc-form-wrapper input.ajax-enabled:active {
   opacity: 0.2;
 }
@@ -40,6 +43,31 @@
   margin: 0 !important;
 }
 
+.form-type--configuration_container .container-actions-wrapper {
+  display: flex;
+  flex-direction: row-reverse;
+  position: absolute;
+  bottom: 5rem;
+  left: 0;
+  z-index: 2;
+  padding: 0 1rem;
+  width: 100%;
+  background-color: var(--colorGinAppBackground);
+  border-top: 1px solid var(--cd-default-border-color);
+  border-bottom: 1px solid var(--cd-default-border-color);
+}
+.form-type--configuration_container .actions-wrapper {
+  display: flex;
+  flex-direction: row-reverse;
+  position: absolute;
+  bottom: 0rem;
+  left: 0;
+  z-index: 2;
+  padding: 0 1rem;
+  width: 100%;
+  background-color: var(--colorGinAppBackground);
+}
+
 .form-type--configuration_container table.summary-table {
   width: 100%;
 }
@@ -67,6 +95,10 @@
 }
 .form-type--configuration_container table.summary-table .draggable.tabledrag-root td {
   font-weight: bold;
+}
+
+.form-type--configuration_container table.summary-table .operation-buttons {
+  white-space: nowrap;
 }
 
 .form-type--configuration_container input[type="radio"]:checked,
